fix & issue : 준성님 styling 중 overflow 취소

--- a/PetitProjects/Team1/src/index.css
+++ b/PetitProjects/Team1/src/index.css
@@ -1,11 +1,9 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
 }
 
 section {
@@ -14,8 +12,7 @@ section {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
 .JunSung {
@@ -27,10 +24,10 @@ code {
 
 .ocean {
   height: 5%;
-  width:100%;
-  position:absolute;
-  bottom:0;
-  left:0;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  left: 0;
   background: #015871;
 }
 
